--- a/snacks/pom.xml
+++ b/snacks/pom.xml
@@ -8,6 +8,13 @@
     <artifactId>snacks</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <groupId>com.getset</groupId>
+        <artifactId>get-reactive</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
+    </parent>
+
     <dependencies>
         <dependency>
             <groupId>io.projectreactor</groupId>
